Almost fix update employee.